Adjust top margin for container with fixed header on iOS

--- a/public/less/responsive.less
+++ b/public/less/responsive.less
@@ -174,7 +174,7 @@
   // Remove width from containers
   body > .container {
     width: auto;
-    margin-top: 20%;
+    margin-top: 30%;
   }
   // Fluid rows
   .row-fluid {
